--- a/values.yml
+++ b/values.yml
@@ -1,4 +1,4 @@
-gitProvider: manishas_jfrog
-artifactory: demoArt
-repoPath: manishas-jfrog/jfrog-pipelines-maven-sample
-deployerRepo: maven-local
+gitProvider: github_alex
+artifactory: artifactory
+repoPath: alexwang66/jfrog-pipelines-maven-sample
+deployerRepo: demo-mvn-prod-local
