--- a/pipelines.yml
+++ b/pipelines.yml
@@ -2,7 +2,7 @@ template: true   # required for local templates
 valuesFilePath: ./values.yml
 
 resources:
-  - name: mvn_repo
+  - name: jfrog_pipeline
     type: GitRepo
     configuration:
       path: {{ .Values.repoPath }}
@@ -22,7 +22,7 @@ pipelines:
           deployerSnapshotRepo: {{ .Values.deployerRepo }}
           deployerReleaseRepo: {{ .Values.deployerRepo }}
           inputResources:
-            - name: mvn_repo
+            - name: jfrog_pipeline
           integrations:
             - name: {{ .Values.artifactory }}
 
