--- a/values.yml
+++ b/values.yml
@@ -1,4 +1,4 @@
-gitProvider: jfrog_pipeline
+gitProvider: alex_github
 artifactory: artifactory
 repoPath: alexwang66/jfrog-pipelines-maven-sample
 deployerRepo: demo-mvn-prod-local
