--- a/pipelines.yml
+++ b/pipelines.yml
@@ -20,6 +20,14 @@ pipelines:
         type: MvnBuild
           mvnCommand: package
         configuration:
+          runtime:
+          type: image
+          image:
+            auto:
+              language: java
+              version: "8" # Either "version" or "versions" can be used.
+              versions:
+                - "8"
           deployerSnapshotRepo: {{ .Values.deployerRepo }}
           deployerReleaseRepo: {{ .Values.deployerRepo }}
           inputResources:
