--- a/pipelines.yml
+++ b/pipelines.yml
@@ -54,3 +54,16 @@ pipelines:
             - name: mvn_build_step
           outputResources:
             - name: mvn_build_info
+      - name: docker_build
+        steps:
+          - name: bld_image
+            type: DockerBuild
+            configuration:
+              dockerFileLocation: .
+              dockerFileName: Dockerfile
+              dockerImageName: demo.jfrogchina.com/demo-docker-prod-local/multi    # replace with your fully qualified Docker registry/image name
+              dockerImageTag: ${run_number}
+              inputResources:
+                - name: mvn_build_step
+              integrations:
+                - name: {{ .Values.artifactory }}
