--- a/pipelines.yml
+++ b/pipelines.yml
@@ -18,40 +18,40 @@ resources:
 pipelines:
   - name: demo_maven
     steps:
-#      - name: mvn_build_step
-#        type: MvnBuild
-#        configuration:
-#          runtime:
-#            type: image
-#            image:
-#              auto:
-#                language: java
-#                versions:
-#                  - "8"
-#          deployerSnapshotRepo: {{ .Values.deployerRepo }}
-#          deployerReleaseRepo: {{ .Values.deployerRepo }}
-#          inputResources:
-#            - name: jfrog_pipeline
-#          integrations:
-#            - name: {{ .Values.artifactory }}
-#
-#      - name: publish_build
-#        type: PublishBuildInfo
-#        configuration:
-#          forceXrayScan: false
-#          inputSteps:
-#            - name: mvn_build_step
-#          outputResources:
-#            - name: mvn_build_info
-      - name: docker_build
-        type: DockerBuild
+      - name: mvn_build_step
+        type: MvnBuild
         configuration:
-          dockerFileLocation: .
-          dockerFileName: Dockerfile
-          dockerImageName: demo.jfrogchina.com/demo-docker-prod-local/multi    # replace with your fully qualified Docker registry/image name
-          dockerImageTag: ${run_number}
+          runtime:
+            type: image
+            image:
+              auto:
+                language: java
+                versions:
+                  - "8"
+          deployerSnapshotRepo: {{ .Values.deployerRepo }}
+          deployerReleaseRepo: {{ .Values.deployerRepo }}
           inputResources:
             - name: jfrog_pipeline
           integrations:
             - name: {{ .Values.artifactory }}
+
+      - name: publish_build
+        type: PublishBuildInfo
+        configuration:
+          forceXrayScan: false
+          inputSteps:
+            - name: mvn_build_step
+          outputResources:
+            - name: mvn_build_info
+#      - name: docker_build
+#        type: DockerBuild
+#        configuration:
+#          dockerFileLocation: .
+#          dockerFileName: Dockerfile
+#          dockerImageName: demo.jfrogchina.com/demo-docker-prod-local/multi    # replace with your fully qualified Docker registry/image name
+#          dockerImageTag: ${run_number}
+#          inputResources:
+#            - name: jfrog_pipeline
+#          integrations:
+#            - name: {{ .Values.artifactory }}
 
